# REV

./: .coverage  .gitignore  BEHAVIORAL_ANALYSIS_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DYNAMIC_SYNTHESIS_INTEGRATION.md  EXPERIMENT_ANALYSIS.md  HIERARCHICAL_PROMPT_ORGANIZATION.md  Makefile  PROJECT_STATUS.md  README.md  VERIFICATION_REPORT.md  VERIFICATION_RESULTS.md  YI34B_E2E_STATUS.md  add_llama_reference.py  behavioral_probing_demo.py  build_deep_reference_library.py  build_reference_library.py  build_unified_references.py  central_experiment_report_20250830_214252.json  central_experiment_report_20250830_214816.json  check_divergence_output.py  clean_reference_library.py  compare_llama_models.py  compare_models.py  complete_validation_report_20250830_213027.json  debug_layer_execution.py  debug_matching_algorithm.py  debug_memory_issue.py  demo_behavioral_diagnostics.py  diagnostic_llama_70b.json  dynamic_test_results.txt  enhance_reference_library.py  experimental_validation_results.json  export_topology.py  final_scientific_validation.txt  fix_behavioral_divergence.py  fix_divergence.py  fix_interpolation_and_matching.py  (+132 more)
REV/: README.md  requirements.txt
benchmarks/: benchmark_suite.py
config/: model_requirements.yaml  paths.yaml
deployment/: .env.example  Dockerfile  docker-compose.yml
diagnostics/: fallback_diagnostic_20250831_180846.json
docker/: Dockerfile.hbt-consensus  Dockerfile.rev-verifier  Dockerfile.unified-coordinator  Makefile  README.md  alertmanager.yml  docker-compose.yml  grafana-dashboard.json  loki-config.yml  nginx.conf  prometheus-rules.yml  prometheus.yml
docs/: ADVERSARIAL_CAPABILITIES.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  FOUR_PHASE_ARCHITECTURE.md  MICRO_PATTERNS_ANALYSIS.md  Makefile  OPERATIONS.md  PAPER_TO_CODE.md  PARALLEL_PROCESSING_GUIDE.md  PROMPT_ANALYTICS_SYSTEM.md  PROMPT_ORCHESTRATION_STATUS.md  RESPONSE_PREDICTION_INTEGRATION.md  Restriction Enzyme Verification (REV) for Memory-Bounded, Black-Box LLM Comparison.md  UNIFIED_FINGERPRINT_SYSTEM.md  USER_GUIDE.md  VERIFICATION_COMPLETE.md  YI34B_EXPERIMENT_REPORT.md  analysis_report_gpt_neo_1.3b.md  macpro-server-setup-reference.html
examples/: README.md  advanced_orchestration.py  api_client.py  basic_verification.py  docker_deployment.py  fingerprint_comparison.py  interactive_tutorial.ipynb  memory_bounded_execution.py  model_verification.py  parallel_processing.py  production_deployment.py  quick_start.py
experiments/: comprehensive_validation.py  feature_analysis.py  memory_profile.py  run_validation_suite.py  visualization.py
fingerprint_library/: active_library.json  fingerprint_library.json  reference_build_report_20250903_095724.json  reference_library.json  reference_library.json.backup  reference_library_backup_20250903_095716.json  reference_library_backup_20250920_211343.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml
old_files/: CRITICAL_FINDINGS.md  DEVICE_FIXES_SUMMARY.md  central_experiment_report_20250830_215043.json  central_experiment_report_20250830_215219.json  cleanup_project.py  experiment_results_20250830_210057.json  full_scientific_results.txt  gpt2_e2e_test.json  llama3.3_70b_metal_test.json  llama3.3_70b_rev_test.json  llama3.3_70b_test.json  monitor_405b_download.py  monitor_rev_test.py  paper_claims_validation.json  rev_70b_full_test.json  rev_complete_20250831_153622.json  rev_complete_20250831_154638.json  run_yi34b_e2e.py  run_yi34b_efficient.py  run_yi34b_pipeline.py  scientific_validation_20250830_150810.json  scientific_validation_20250830_150846.json  scientific_validation_20250830_150916.json  scientific_validation_20250830_153629.json  scientific_validation_20250830_153854.json  simple_monitor.py  test_activation_extraction.py  test_adaptive_encoder.py  test_behavioral_probing.py  test_behavioral_probing_integration.py  test_comprehensive_pipeline.py  test_full_pipeline_scientific.py  test_re_sites.py  test_real_execution_proof.py  test_real_pipeline.py  test_restriction_site_discovery.py  test_rev_verification.py  test_semantic_hypervector.py  test_sequential_framework.py  test_sparse_encoding_fix.py  (+6 more)
outputs/: INSANE_405B_TEST.json  distilgpt2_deep_reference.json  gpt2_1percent_sparse.json  gpt2_baseline.json  gpt2_behavioral_fingerprint.json  gpt2_behavioral_fingerprint_sparse.json  gpt2_behavioral_full.json  gpt2_medium_identified.json  gpt2_sparse_preserved.json  llama70b_unified_test.json  pythia_70m_deep_reference.json  pythia_reference.json  reference_deepseek_r1.json  reference_dialogpt_small.json  (+12 more)
(+332 files in other folders)
