[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rev-framework"
version = "1.0.0"
description = "Restriction Enzyme Verification (REV) - Memory-bounded black-box LLM comparison framework"
readme = "README.md"
authors = [
    {name = "REV Team", email = "rev@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "pycryptodome>=3.15.0,<4.0.0",
    "PyYAML>=6.0,<7.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.20.0,<1.0.0",
    "redis>=4.5.0,<6.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0",
    "tqdm>=4.65.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "hypothesis>=6.75.0,<7.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.3.0,<2.0.0",
    "isort>=5.12.0,<6.0.0",
]

quantization = [
    "bitsandbytes>=0.41.0,<1.0.0",
]

gpu = [
    "cupy-cuda11x>=11.0.0,<13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/rohanvinaik/REV"
"Bug Reports" = "https://github.com/rohanvinaik/REV/issues"
"Source" = "https://github.com/rohanvinaik/REV"

[project.scripts]
rev-verify = "src.cli:main"
rev-api = "src.api.unified_api:main"
rev-experiment = "run_central_experiment:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.core", "src.executor", "src.hdc", "src.hypervector", 
            "src.verifier", "src.privacy", "src.crypto", "src.consensus",
            "src.models", "src.api", "benchmarks", "examples"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]